# HexaEngine.ShaderLang

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  cpp.hint
backend/: CMakeLists.txt
backend/include/: allocator.h
backend/include/core/: config.h  language.hpp  layout_builder.hpp  module.hpp  number.hpp  operator.hpp
backend/include/il/: control_flow_graph.hpp  dag_graph.hpp  func_call_graph.hpp  graph_base.hpp  il_code_blob.hpp  il_container.hpp  il_context.hpp  il_encoding.hpp  il_helper.hpp  il_metadata.hpp  instruction.hpp  jump_table.hpp  loop_tree.hpp  lt_dominator_tree.hpp  operand_factory.hpp  operands.hpp  rpo_merger.hpp  scc_graph.hpp  value.hpp
backend/include/io/: source_file.hpp  source_location.hpp  source_manager.hpp  stream.h  stream.hpp  text_stream.hpp
backend/include/lexical/: identifier_table.hpp  text_span.hpp
backend/include/logging/: diagnostic_code.hpp  log_message.h  logger.hpp
backend/include/optimizers/: algebraic_simplifier.hpp  constant_folder.hpp  dead_code_eliminator.hpp  function_inliner.hpp  global_value_numbering.hpp  il_optimizer.hpp  il_optimizer_pass.hpp  loop_unroller.hpp  reassociation_pass.hpp  strength_reduction.hpp
backend/include/pch/: il.hpp
backend/include/ssa/: memory_ssa_graph.hpp  ssa_builder.hpp  ssa_reducer.hpp
backend/src/: allocator.cpp
backend/src/core/: config.cpp  module.cpp
backend/src/il/: control_flow_graph.cpp  il_code_blob.cpp  il_context.cpp  il_encoding.cpp  il_metadata.cpp  instruction.cpp  loop_tree.cpp  rpo_merger.cpp
backend/src/io/: source_file.cpp  stream.cpp
backend/src/lexical/: text_span.cpp
backend/src/logging/: diagnostic_code.cpp  logger.cpp
backend/src/optimizers/: algebraic_simplifier.cpp  common_sub_expression.cpp  constant_folder.cpp  dead_code_eliminator.cpp  function_inliner.cpp  global_value_numbering.cpp  il_optimizer.cpp  liveness_analyzer.cpp  loop_unroller.cpp  reassociation_pass.cpp  strength_reduction.cpp
backend/src/ssa/: ssa_builder.cpp  ssa_reducer.cpp
compiler/: CMakeLists.txt  library.txt  main.cpp  shader2.txt
compiler/example/: library.txt  shader.txt  shader2.txt
frontend/: CMakeLists.txt
frontend/include/: blob.hpp  config.h  hxls_compiler.hpp
frontend/include/c/: common.h  hxsl_compiler.h
frontend/src/: ast_context.hpp  hxls_compiler.cpp  localization.cpp
frontend/src/ast_modules/: array.cpp  array.hpp  array_manager.cpp  array_manager.hpp  ast_base.cpp  ast_base.hpp  ast_builder.cpp  ast_builder.hpp  ast_context.hpp  ast_validator.cpp  ast_validator.hpp  ast_visitor.hpp  attributes.cpp  attributes.hpp  compilation_unit.cpp  compilation_unit.hpp  container.hpp  debug_visitor.hpp  declarations.cpp  declarations.hpp  enum.cpp  enum.hpp  expressions.cpp  expressions.hpp  helpers.cpp  helpers.hpp  instantiator.hpp  interfaces.cpp  interfaces.hpp  macros.hpp  namespace.cpp  namespace.hpp  node_builder.hpp  pointer.cpp  pointer.hpp  pointer_manager.cpp  pointer_manager.hpp  primitive.cpp  primitive.hpp  primitive_manager.cpp  (+9 more)
frontend/src/c/: hxsl_compiler.cpp
frontend/src/il/: assembly.cpp  assembly.hpp  assembly_collection.hpp  control_flow_analyzer.cpp  control_flow_analyzer.hpp
frontend/src/io/: source_file.hpp
frontend/src/lang/: keyword.hpp  language.hpp  operator.hpp
frontend/src/lexical/: identifier_table.hpp  input_stream.hpp  lexer.cpp  lexer.hpp  lexer_config.cpp  text_mapping.hpp  token.hpp  token_stream.hpp
frontend/src/logging/: logger_adapter.hpp
frontend/src/middleware/: helper.hpp  il_builder.cpp  il_builder.hpp  il_expression_builder.cpp  il_expression_builder.hpp  metadata_builder.hpp  module_builder.cpp  module_builder.hpp  module_decompiler.cpp  module_decompiler.hpp  module_stub.hpp
frontend/src/parsers/: declaration_parser.cpp  declaration_parser.hpp  expression_parser.cpp  expression_parser.hpp  hybrid_expr_parser.cpp  hybrid_expr_parser.hpp  lazy.hpp  member_path_parser.cpp  member_path_parser.hpp  parser.cpp  parser.hpp  parser_helper.cpp  parser_helper.hpp  statement_parser.cpp  statement_parser.hpp  sub_parser.hpp  sub_parser_registry.cpp  sub_parser_registry.hpp
frontend/src/pch/: ast.hpp  ast_analyzers.hpp  localization.hpp
frontend/src/preprocessing/: evaluator.cpp  evaluator.hpp  preprocessor.cpp  preprocessor.hpp
frontend/src/semantics/: assembly_resolver.cpp  assembly_resolver.hpp  ast_stub_manager.cpp  ast_stub_manager.hpp  declaration_analyzer.cpp  declaration_analyzer.hpp  expression_checker.cpp  expression_checker.hpp  semantic_analyzer.cpp  semantic_analyzer.hpp  statement_checker.cpp  statement_checker.hpp  sub_analyzer_registry.cpp  type_checker.cpp  type_checker.hpp
frontend/src/utils/: expression_evaluator.cpp  expression_evaluator.hpp
gui/: CMakeLists.txt  imgui_window.cpp  imgui_window.hpp  main.cpp  window_manager.cpp  window_manager.hpp
interpreter/: CMakeLists.txt
interpreter/example/: library.module
interpreter/include/: il_interpreter.hpp
interpreter/src/: main.cpp
test/: CMakeLists.txt  intrinsics.txt  library.txt  main.cpp  shader.txt
tests/: CMakeLists.txt  common.hpp  expect_file.hpp  main.cpp  pratt_parser_tests.cpp  resolver_tests.cpp
tests/pratt_parser_tests/: test_complex.txt  test_division_multiplication.txt  test_empty.txt  test_empty_parentheses.txt  test_function_call.txt  test_invalid_syntax.txt  test_multiple_same_precedence.txt  test_nested_parentheses.txt  test_operator_associativity.txt  test_operator_precedence.txt  test_parentheses_grouping.txt  test_simple.txt  test_simple_no_semicolon.txt  test_ternary.txt  test_unary_operator.txt
tests/resolver_tests/: test_simple.txt
tests/src/: common.hpp  main.cpp  pratt_parser_tests.cpp
tools/: CMakeLists.txt  code_writer.py  diag_message.py  locales_gen.py  main.cpp  schema.yml  tests_gen.py  transl_writer.py
utils/: CMakeLists.txt
utils/include/pch/: std.hpp
utils/include/utils/: MurmurHash3.h  array.hpp  ast_allocator.hpp  (+24 more)
utils/src/: MurmurHash3.cpp  ast_allocator.cpp  bump_allocator.cpp  text_helper.cpp  xxhash.c
utils/tests/: CMakeLists.txt  main.cpp
(+323 files in other folders)
